--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  color: #202020;
   font-family: sans-serif;
   background: rgb(253, 244, 184);
   background: linear-gradient(
@@ -10,7 +9,7 @@ body {
   );
 }
 .navbar {
-  background-color: rgb(238, 121, 117);
+  background-color: rgb(238, 106, 101);
   overflow: hidden;
   display: flex;
   align-items: center;
@@ -58,10 +57,10 @@ body {
 }
 
 .action-btn {
-  background-color: rgb(238, 121, 117);
+  background-color: rgb(238, 106, 101);
   border: none;
   color: white;
-  padding: 12px 68px;
+  padding: 12px 100px;
   font-size: 16px;
 }
 
@@ -83,7 +82,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 34px;
+  gap: 24px;
   height: 100vh;
 }
 
@@ -91,7 +90,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 24px;
+  gap: 12px;
 }
 
 .small-image {
@@ -100,14 +99,21 @@ body {
   object-fit: cover;
 }
 
+.large-image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 44px;
+}
+
 .large-image {
   width: 250px;
-  height: 424px;
+  height: 412px;
   object-fit: cover;
 }
 
 .dark-background {
-  background-color: rgb(238, 121, 117);
+  background-color: rgb(238, 106, 101);
   padding: 0 32px;
 }
 
@@ -171,10 +177,16 @@ body {
 
   .card-container {
     width: 100%;
+    gap: 24px;
   }
 
   .small-image {
     width: 100%;
+  }
+
+  .large-image-container {
+    flex-direction: column;
+    gap: 24px;
   }
 
   .large-image {
@@ -235,11 +247,16 @@ body {
 
   .card-container {
     width: 100%;
+    gap: 24px;
   }
 
   .small-image {
     width: 100%;
     height: 50vh;
+  }
+
+  .large-image-container {
+    flex-direction: column;
   }
 
   .large-image {
